# overtime-report

./: .gitignore  README.md  pyproject.toml  run.py
.agent/rules/: code-style-guide.md
src/overtime_report/: ai_reporter.py  config.py  git_analyzer.py  main.py
